--- a/CSS/style.css
+++ b/CSS/style.css
@@ -86,6 +86,10 @@ h4 {
   width: 60%;
   justify-content: space-between;
 }
+.votes label{
+  font-size: 0.8rem;
+  width: 40%;
+}
 .red {
   color: red;
 }
