--- a/CSS/style.css
+++ b/CSS/style.css
@@ -91,6 +91,13 @@ h4 {
   font-size: 1rem;
   width: 40%;
 }
+.votes input{
+  padding: 8px;
+  font-size: 1.2rem;
+}
+.fa-heart{
+  font-size: 3rem;
+}
 .red {
   color: red;
 }
